# Visual

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  launch.bat  launch.command  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/samples/: sample_lyrics.txt
tests/: test_flash_generator.py  test_lyrics_parser.py  test_puzzle_solver.py
visualquiz/: __init__.py  main.py
visualquiz/common/: font_manager.py  pptx_builder.py  video_exporter.py
visualquiz/quiz1_flash/: flash_generator.py  kanjivg.py  stroke_renderer.py
visualquiz/quiz2_lyrics/: lyrics_parser.py  lyrics_video.py
visualquiz/quiz3_puzzle/: puzzle_solver.py  puzzle_video.py
